--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 </head>
 
 <body>
+    <header>
+        <nav class="header__nav">
+            <div class="header__logo">
+                <h4>SUSHI</h4>
+                <div class="header__logo-overlay"></div>
+            </div>
+            <ul class="header__menu">
+                <li>
+                    <a href="#menu">Menu</a>
+                </li>
+                <li>
+                    <a href="#food">Food</a>
+                </li>
+                <li>
+                    <a href="#services">Services</a>
+                </li>
+                <li>
+                    <a href="#about-us">About Us</a>
+                </li>
+                <li>
+                    <img src="./assets/images/search.svg" alt="search">
+                </li>
+            </ul>
+            <ul class="header__menu-mobile">
+                <li>
+                    <img src="./assets/images/menu.svg" alt="menu">
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <script src="./assets/js/script.js" type="module"></script>
 </body>
