--- a/index.html
+++ b/index.html
@@ -40,6 +40,42 @@
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <div class="hero-image">
+            <img src="./assets/images/sushi-1.png" alt="sushi">
+            <h2>
+                日 <br />
+                本 <br />
+                食
+            </h2>
+            <div class="hero-image__overlay"></div>
+        </div>
+        <div class="hero-content">
+            <div class="hero-content-info">
+                <h1>Feel the taste of Japanese Food</h1>
+                <p>
+                    Feel the taste of the most popular Japanese food from anytime and anywhere.
+                </p>
+                <div class="hero-content__buttons">
+                    <button class="hero-content__order-button">Order Now</button>
+                    <button class="hero-content__play-button">
+                        <img src="./assets/images/play-circle.svg" alt="play">
+                        How to Order
+                    </button>
+                </div>
+            </div>
+            <div class="hero-content__testimonal">
+                <div class="hero-content__customer flex-center">
+                    <h4>24<span>4k</span></h4>
+                    <p>Happy Customers</p>
+                </div>
+                <div class="hero-content__review">
+                    <img src="./assets/images/user.png" alt="user">
+                    <p>"This is the best Japanese food delivery service that ever existed."</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="./assets/js/script.js" type="module"></script>
 </body>
