--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="hero-content__testimonal">
                 <div class="hero-content__customer flex-center">
-                    <h4>24<span>4k</span></h4>
+                    <h4>24<span>k</span></h4>
                     <p>Happy Customers</p>
                 </div>
                 <div class="hero-content__review">
