--- a/index.html
+++ b/index.html
@@ -101,6 +101,33 @@
         </div>
     </section>
 
+    <section class="popular-foods" id="menu">
+        <h2 class="popular-foods__title">Popular Food / 人気</h2>
+        <div class="popular-foods__filters sushi__hide-scrollbar">
+            <button class="popular-foods__filter-btn active">All</button>
+            <button class="popular-foods__filter-btn">
+                <img src="./assets/images/sushi-9.png" alt="sushi 9">Sushi
+            </button>
+            <button class="popular-foods__filter-btn">
+                <img src="./assets/images/sushi-8.png" alt="sushi 8">Ramen
+            </button>
+            <button class="popular-foods__filter-btn">
+                <img src="./assets/images/sushi-7.png" alt="sushi 7">Udon
+            </button>
+            <button class="popular-foods__filter-btn">
+                <img src="./assets/images/sushi-6.png" alt="sushi 6">Danggo
+            </button>
+            <button class="popular-foods__filter-btn">Others</button>
+        </div>
+        <div class="popular-foods_catalogue">
+            <!-- javaScript -->
+        </div>
+        <button class="popular-foods__button">
+            Explore Food
+            <img src="./assets/images/arrow-right.svg" alt="arrow-right">
+        </button>
+    </section>
+
     <script src="./assets/js/script.js" type="module"></script>
 </body>
 
