--- a/index.html
+++ b/index.html
@@ -120,7 +120,41 @@
             <button class="popular-foods__filter-btn">Others</button>
         </div>
         <div class="popular-foods_catalogue">
-            <!-- javaScript -->
+            <article class="popular-foods__card">
+                <img src="./assets/images/sushi-12.png" alt="sushi 12" class="popular-foods__card-image">
+                <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+                <div class="popular-foods__card-details flex-between">
+                    <div class="popular-foods__card-rating">
+                        <img src="./assets/images/star.svg" alt="star">
+                        <p>4.9</p>
+                    </div>
+                    <p class="popular-foods__card-prices">$21.00</p>
+                </div>
+            </article>
+
+            <article class="popular-foods__card active-card">
+                <img src="./assets/images/sushi-11.png" alt="sushi 11" class="popular-foods__card-image">
+                <h4 class="popular-foods__card-title">Original Sushi</h4>
+                <div class="popular-foods__card-details flex-between">
+                    <div class="popular-foods__card-rating">
+                        <img src="./assets/images/star.svg" alt="star">
+                        <p>5.0</p>
+                    </div>
+                    <p class="popular-foods__card-prices">$19.00</p>
+                </div>
+            </article>
+
+            <article class="popular-foods__card">
+                <img src="./assets/images/sushi-10.png" alt="sushi 10" class="popular-foods__card-image">
+                <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+                <div class="popular-foods__card-details flex-between">
+                    <div class="popular-foods__card-rating">
+                        <img src="./assets/images/star.svg" alt="star">
+                        <p>4.7</p>
+                    </div>
+                    <p class="popular-foods__card-prices">$13.00</p>
+                </div>
+            </article>
         </div>
         <button class="popular-foods__button">
             Explore Food
