--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./assets/images/sushi-9.png">
     <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Sushi</title>
 </head>
 
@@ -13,10 +14,10 @@
     <header>
         <nav class="header__nav">
             <div class="header__logo">
-                <h4>SUSHI</h4>
+                <h4 data-aos="fade-down">SUSHI</h4>
                 <div class="header__logo-overlay"></div>
             </div>
-            <ul class="header__menu">
+            <ul class="header__menu" data-aos="fade-down">
                 <li>
                     <a href="#menu">Menu</a>
                 </li>
@@ -33,7 +34,7 @@
                     <img src="./assets/images/search.svg" alt="search">
                 </li>
             </ul>
-            <ul class="header__menu-mobile">
+            <ul class="header__menu-mobile" data-aos="fade-down">
                 <li>
                     <img src="./assets/images/menu.svg" alt="menu">
                 </li>
@@ -42,8 +43,8 @@
     </header>
     <section class="hero">
         <div class="hero-image">
-            <img src="./assets/images/sushi-1.png" alt="sushi">
-            <h2>
+            <img src="./assets/images/sushi-1.png" alt="sushi" data-aos="fade-up">
+            <h2 data-aos="fade-up">
                 日 <br />
                 本 <br />
                 食
@@ -51,7 +52,7 @@
             <div class="hero-image__overlay"></div>
         </div>
         <div class="hero-content">
-            <div class="hero-content-info">
+            <div class="hero-content-info" data-aos="fade-left">
                 <h1>Feel the taste of Japanese Food</h1>
                 <p>
                     Feel the taste of the most popular Japanese food from anytime and anywhere.
@@ -64,7 +65,7 @@
                     </button>
                 </div>
             </div>
-            <div class="hero-content__testimonal">
+            <div class="hero-content__testimonal" data-aos="fade-up">
                 <div class="hero-content__customer flex-center">
                     <h4>24<span>k</span></h4>
                     <p>Happy Customers</p>
@@ -80,17 +81,17 @@
     <section class="about-us" id="about-us">
         <div class="about-us__image">
             <div class="about-us__image-sushi3">
-                <img src="./assets/images/sushi-3.png" alt="sushi">
+                <img src="./assets/images/sushi-3.png" alt="sushi" data-aos="fade-right">
             </div>
             <button class="about-us__button">
                 Learn More
                 <img src="./assets/images/arrow-up-right.svg" alt="learn more">
             </button>
             <div class="about-us__image-sushi2">
-                <img src="./assets/images/sushi-2.png" alt="sushi">
+                <img src="./assets/images/sushi-2.png" alt="sushi" data-aos="fade-right">
             </div>
         </div>
-        <div class="about-us__content">
+        <div class="about-us__content" data-aos="fade-left">
             <p class="sushi__subtitle">About Us / 私たちに関しては</p>
             <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
             <p class="sushi__description">
@@ -102,8 +103,8 @@
     </section>
 
     <section class="popular-foods" id="menu">
-        <h2 class="popular-foods__title">Popular Food / 人気</h2>
-        <div class="popular-foods__filters sushi__hide-scrollbar">
+        <h2 class="popular-foods__title" data-aos="flip-up">Popular Food / 人気</h2>
+        <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
             <button class="popular-foods__filter-btn active">All</button>
             <button class="popular-foods__filter-btn">
                 <img src="./assets/images/sushi-9.png" alt="sushi 9">Sushi
@@ -119,7 +120,7 @@
             </button>
             <button class="popular-foods__filter-btn">Others</button>
         </div>
-        <div class="popular-foods_catalogue">
+        <div class="popular-foods_catalogue" data-aos="fade-up">
             <article class="popular-foods__card">
                 <img src="./assets/images/sushi-12.png" alt="sushi 12" class="popular-foods__card-image">
                 <h4 class="popular-foods__card-title">Chezu Sushi</h4>
