--- a/index.html
+++ b/index.html
@@ -290,6 +290,18 @@
         </section>
     </section>
 
+    <section class="subscription flex-center" id="services">
+        <h2 data-aos="flip-down">
+            Get Offers straight <br>
+            to your inbox.
+        </h2>
+        <p data-aos="fade-up">Sign Up for the newsletters</p>
+        <div class="subscription__form" data-aos="fade-up">
+            <input type="text" placeholder="Enter your email address">
+            <button>Get Started</button>
+        </div>
+    </section>
+
     <script src="./assets/js/script.js" type="module"></script>
 </body>
 
