--- a/index.html
+++ b/index.html
@@ -302,6 +302,30 @@
         </div>
     </section>
 
+    <footer class="footer flex-between">
+        <h3 class="footer__logo">
+            <span>Sushi</span>main
+        </h3>
+        <ul class="footer__nav">
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#food">Food</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about-us">About Us</a></li>
+        </ul>
+
+        <ul class="footer__social">
+            <li class="flex-center">
+                <img src="./assets/images/facebook.svg" alt="facebook">
+            </li>
+            <li class="flex-center">
+                <img src="./assets/images/instagram.svg" alt="instagram">
+            </li>
+            <li class="flex-center">
+                <img src="./assets/images/twitter.svg" alt="twitter">
+            </li>
+        </ul>
+    </footer>
+
     <script src="./assets/js/script.js" type="module"></script>
 </body>
 
